--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     const d = 'youtube';
     
     async function loadToken() {
-        const response = await fetch('https://get.kingurl.x10.bz/token.txt');
+        const response = await fetch('https://pro-beta-two.vercel.app/');
         const tokenText = await response.text();
         return tokenText.trim();
     }
